--- a/app/register-user/register-user.component.html
+++ b/app/register-user/register-user.component.html
@@ -3,22 +3,31 @@
     <hr/>
     <div class="card card-container">
         <form role="form" class="form-signup" (ngSubmit)="submit()" #form="ngForm">
+            <div *ngIf="_validationErrors" [innerHtml]="_validationErrors" class="alert alert-danger"></div>
             <div class="form-group has-feedback">
                 <label for="emailAddress">Email address</label>
                 <input type="email" class="form-control" id="emailAddress" placeholder="you@example.com" [(ngModel)]="_userRegistration.emailAddress"
-                ngControl="emailAddress" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required>
+                    ngControl="emailAddress" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required>
                 <span class="form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
                 <label for="companyName">Company Name</label>
                 <input type="text" class="form-control" id="companyName" [(ngModel)]="_userRegistration.companyName" ngControl="companyName"
-                required>
+                    required>
                 <span class="form-control-feedback"></span>
+            </div>
+            <div class="form-group has-feedback">
+                <label for="password">Enter a password</label>
+                <input type="password" class="form-control" id="password" [(ngModel)]="_userRegistration.password" required>
+            </div>
+            <div class="form-group has-feedback">
+                <label for="confirmPassword">Confirm password</label>
+                <input type="password" class="form-control" id="confirmPassword" [(ngModel)]="_confirmPassword" required>
             </div>
             <div class="form-group has-feedback">
                 <label for="licenseKey">License Expiration Date</label>
                 <input type="date" class="form-control" id="licenseKey" #licenseKey (change)="getLicenseKey(licenseKey.value)" [(ngModel)]="_userRegistration.expiration"
-                ngControl="expiration" required>
+                    ngControl="expiration" required>
                 <span class="form-control-feedback"></span>
             </div>
             <div class="form-group" *ngIf="_userRegistration.licenseKey">
