--- a/app/register-user/register-user.component.html
+++ b/app/register-user/register-user.component.html
@@ -7,7 +7,7 @@
             <div class="form-group has-feedback">
                 <label for="emailAddress">Email address</label>
                 <input type="email" class="form-control" id="emailAddress" placeholder="you@example.com" [(ngModel)]="_userRegistration.emailAddress"
-                    ngControl="emailAddress" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required>
+                    ngControl="emailAddress" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
                 <span class="form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
