--- a/app/software-licenses/software-licenses.component.html
+++ b/app/software-licenses/software-licenses.component.html
@@ -16,17 +16,15 @@
         <div class="col-xs-12 col-sm-6">
             <div class="form-group">
                 <label for="newClientName">Add new client</label>
-                <div class="row">
-                    <div class="col-xs-12 col-md-10">
-                        <input type="text" class="form-control" id="newClientName" [(ngModel)]="_newClientName" placeholder="New Client Name" required>
-                    </div>
-                </div>
+                <input type="text" class="form-control" id="newClientName" [(ngModel)]="_newClientName" placeholder="New Client Name" required>
+                <wc-button [isDisabled]="_isAdding" (click)="addClient(_newClientName)" [style]="'btn btn-primary'" [label]="'Add Client'"
+                    [workingLabel]="'Adding Client...'"></wc-button>
             </div>
         </div>
     </div>
     <hr />
     <div>
-    <pagination-controls class="text-right" (pageChange)="p = $event; _page = p;" #api></pagination-controls>
+        <pagination-controls class="text-right" (pageChange)="p = $event; _page = p;" #api></pagination-controls>
     </div>
     <div class="table-responsive">
         <table class="table table-striped table-hover">
@@ -49,7 +47,7 @@
                     <td class="actions text-right">
                         <button class="btn btn-secondary" (click)="selectClient(client)" data-toggle="modal" data-target="#modal">Add/View Licenses</button>
                         <wc-button [isDisabled]="_isDeletingClient" (click)="deleteClient(client)" [style]="'btn btn-secondary'" [label]="'Delete Client'"
-                        [workingLabel]="'Deleting Client...'"></wc-button>
+                            [workingLabel]="'Delete Client'"></wc-button>
                     </td>
                 </tr>
             </tbody>
@@ -72,7 +70,7 @@
                             <input type="date" id="newLicense" name="newLicense" [(ngModel)]="_newLicenseExpiration" class="form-control" />
                         </div>
                         <wc-button [isDisabled]="_isAddingLicense" (click)="addLicense(_newLicenseExpiration)" [style]="'btn btn-primary'" [label]="'Add License'"
-                        [workingLabel]="'Adding License...'"></wc-button>
+                            [workingLabel]="'Adding License...'"></wc-button>
                     </div>
                 </div>
                 <div class="row" *ngIf="_selectedClient.licenses && _selectedClient.licenses.length > 0">
@@ -95,7 +93,7 @@
                                         <td [innerHtml]="license.hasExpired | tick"></td>
                                         <td class="actions">
                                             <wc-button [isDisabled]="_isDeletingLicense" (click)="deleteLicense(_selectedClient, license)" [style]="'btn btn-secondary pull-right'"
-                                            [label]="'Delete License'" [workingLabel]="'Deleting License...'"></wc-button>
+                                                [label]="'Delete License'" [workingLabel]="'Deleting License...'"></wc-button>
                                         </td>
                                     </tr>
                                 </tbody>
