--- a/app/centre-check/centre-check.component.html
+++ b/app/centre-check/centre-check.component.html
@@ -2,8 +2,8 @@
     <h1>Centre Check</h1>
     <hr/>
     <div class="row">
-        <div class="col-xs-12" *ngIf="!_isRequesting">
-            <pagination-controls class="text-right" (pageChange)="p = $event; _page = p;" #api></pagination-controls>
+        <div class="col-xs-12" *ngIf="!isRequesting">
+            <pagination-controls class="text-right" (pageChange)="p = $event; page = p;" #api></pagination-controls>
         </div>
     </div>
     <div class="row">
@@ -20,12 +20,12 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngIf="_isRequesting">
+                        <tr *ngIf="isRequesting">
                             <td colspan="6">
-                                <spinner [isRunning]="_isRequesting"></spinner>
+                                <spinner [isRunning]="isRequesting"></spinner>
                             </td>
                         </tr>
-                        <tr *ngFor="#centreCheck of _centreChecks | paginate: { itemsPerPage: 10, currentPage: p }" class="pointer" (click)="downloadPdf($event, centreCheck)">
+                        <tr *ngFor="#centreCheck of centreChecks | paginate: { itemsPerPage: 10, currentPage: p }" class="pointer" (click)="downloadPdf($event, centreCheck)">
                             <td><img src="/img/centrecheck.png" alt="Centre Check" /> </td>
                             <td>{{centreCheck.centreName}}</td>
                             <td>{{centreCheck.sealNumber}}</td>
