--- a/app/manage-access/manage-access.component.html
+++ b/app/manage-access/manage-access.component.html
@@ -7,8 +7,8 @@
             <div class="col-xs-12 col-sm-6">
                 <div class="form-group">
                     <label for="selectUser">Select user</label>
-                    <select id="selectUser" name="selectUser" class="form-control" #site [(ngModel)]="_selectedSiteId" (change)="getConnectedSites(site.value, site)">
-                        <option [value]="item.id" *ngFor="#item of _users" #index>{{item.name}}</option>
+                    <select id="selectUser" name="selectUser" class="form-control" #site [(ngModel)]="selectedSiteId" (change)="getConnectedSites(site.value, site)">
+                        <option [value]="item.id" *ngFor="#item of users" #index>{{item.name}}</option>
                     </select>
                 </div>
             </div>
@@ -16,12 +16,12 @@
     </form>
     <hr/>
 
-    <spinner [isRunning]="_isRequesting"></spinner>
+    <spinner [isRunning]="isRequesting"></spinner>
 
-    <p class="text-center" *ngIf="!_isRequesting && _selectedSiteId && (!_connectedSites || _connectedSites.length === 0)">No data to display</p>
+    <p class="text-center" *ngIf="!isRequesting && selectedSiteId && (!connectedSites || connectedSites.length === 0)">No data to display</p>
 
     <div class="table-responsive">
-        <table class="table table-striped table-hover" *ngIf="_connectedSites && _connectedSites.length > 0 && !_isRequesting">
+        <table class="table table-striped table-hover" *ngIf="connectedSites && connectedSites.length > 0 && !isRequesting">
             <thead>
                 <tr>
                     <th>Site Description</th>
@@ -29,10 +29,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="#site of _connectedSites">
+                <tr *ngFor="#site of connectedSites">
                     <td>{{site.description}}</td>
                     <td class="actions">
-                        <wc-button [isDisabled]="_isUpdating" [style]="'btn btn-secondary pull-right'" [label]="site.isRevoked ? 'Authorize' : 'Revoke'"
+                        <wc-button [isDisabled]="isUpdating" [style]="'btn btn-secondary pull-right'" [label]="site.isRevoked ? 'Authorize' : 'Revoke'"
                         [workingLabel]="site.isRevoked ? 'Authorize' : 'Revoke'" (click)="toggleAccess(site)"></wc-button>
                     </td>
                 </tr>
