--- a/app/software-licenses/software-licenses.component.html
+++ b/app/software-licenses/software-licenses.component.html
@@ -16,15 +16,15 @@
         <div class="col-xs-12 col-sm-6">
             <div class="form-group">
                 <label for="newClientName">Add new client</label>
-                <input type="text" class="form-control" id="newClientName" [(ngModel)]="_newClientName" placeholder="New Client Name" required>
-                <wc-button [isDisabled]="_isAdding" (click)="addClient(_newClientName)" [style]="'btn btn-primary'" [label]="'Add Client'"
+                <input type="text" class="form-control" id="newClientName" [(ngModel)]="newClientName" placeholder="New Client Name" required>
+                <wc-button [isDisabled]="isAdding" (click)="addClient(newClientName)" [style]="'btn btn-primary'" [label]="'Add Client'"
                     [workingLabel]="'Adding Client...'"></wc-button>
             </div>
         </div>
     </div>
     <hr />
     <div>
-        <pagination-controls class="text-right" (pageChange)="p = $event; _page = p;" #api></pagination-controls>
+        <pagination-controls class="text-right" (pageChange)="p = $event; page = p;" #api></pagination-controls>
     </div>
     <div class="table-responsive">
         <table class="table table-striped table-hover">
@@ -36,17 +36,17 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngIf="_isRequesting">
+                <tr *ngIf="isRequesting">
                     <td colspan="8">
-                        <spinner [isRunning]="_isRequesting"></spinner>
+                        <spinner [isRunning]="isRequesting"></spinner>
                     </td>
                 </tr>
-                <tr *ngFor="#client of _clients | clientName:filterValue | paginate: { itemsPerPage: 10, currentPage: p }">
+                <tr *ngFor="#client of clients | clientName:filterValue | paginate: { itemsPerPage: 10, currentPage: p }">
                     <td>{{client.name}}</td>
                     <td>{{client.licenses.length}}</td>
                     <td class="actions text-right">
                         <button class="btn btn-secondary" (click)="selectClient(client)" data-toggle="modal" data-target="#modal">Add/View Licenses</button>
-                        <wc-button [isDisabled]="_isDeletingClient" (click)="deleteClient(client)" [style]="'btn btn-secondary'" [label]="'Delete Client'"
+                        <wc-button [isDisabled]="isDeletingClient" (click)="deleteClient(client)" [style]="'btn btn-secondary'" [label]="'Delete Client'"
                             [workingLabel]="'Delete Client'"></wc-button>
                     </td>
                 </tr>
@@ -67,13 +67,13 @@
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group">
                             <label for="newLicense">Add New License</label>
-                            <input type="date" id="newLicense" name="newLicense" [(ngModel)]="_newLicenseExpiration" class="form-control" />
+                            <input type="date" id="newLicense" name="newLicense" [(ngModel)]="newLicenseExpiration" class="form-control" />
                         </div>
-                        <wc-button [isDisabled]="_isAddingLicense" (click)="addLicense(_newLicenseExpiration)" [style]="'btn btn-primary'" [label]="'Add License'"
+                        <wc-button [isDisabled]="isAddingLicense" (click)="addLicense(newLicenseExpiration)" [style]="'btn btn-primary'" [label]="'Add License'"
                             [workingLabel]="'Adding License...'"></wc-button>
                     </div>
                 </div>
-                <div class="row" *ngIf="_selectedClient.licenses && _selectedClient.licenses.length > 0">
+                <div class="row" *ngIf="selectedClient.licenses && selectedClient.licenses.length > 0">
                     <div class="col-xs-12">
                         <hr />
                         <div class="table-responsive">
@@ -87,12 +87,12 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="#license of _selectedClient.licenses">
+                                    <tr *ngFor="#license of selectedClient.licenses">
                                         <td>{{license.license}}</td>
                                         <td>{{asDate(license.expiration) | date}}</td>
                                         <td [innerHtml]="license.hasExpired | tick"></td>
                                         <td class="actions">
-                                            <wc-button [isDisabled]="_isDeletingLicense" (click)="deleteLicense(_selectedClient, license)" [style]="'btn btn-secondary pull-right'"
+                                            <wc-button [isDisabled]="isDeletingLicense" (click)="deleteLicense(selectedClient, license)" [style]="'btn btn-secondary pull-right'"
                                                 [label]="'Delete License'" [workingLabel]="'Deleting License...'"></wc-button>
                                         </td>
                                     </tr>
