--- a/app/inspection-data/inspection-data.component.html
+++ b/app/inspection-data/inspection-data.component.html
@@ -55,7 +55,7 @@
     <div *ngIf="inspectionData && inspectionData.history && !inspectionData.isDefault">
         <h2>Inspection data history</h2>
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-            <div class="panel panel-default" *ngFor="#item of inspectionData.history; #i=index">
+            <div class="panel panel-default" *ngFor="let item of inspectionData.history; let i = index">
                 <div class="panel-heading" role="tab" [attr.id]="'heading'+i">
                     <h4 class="panel-title">
                     <a role="button" data-toggle="collapse" data-parent="#accordion" [attr.href]="'#collapse'+i" aria-expanded="true" [attr.aria-controls]="'collapse'+i">
