--- a/css/site.scss
+++ b/css/site.scss
@@ -413,6 +413,21 @@ pagination-controls li.current{
   border-left: 5px solid #a94442;
 }
 
+.pie-legend {
+	list-style-type: none;
+		
+	li {
+		display: inline;
+		margin-left: 15px;
+		span {
+			display: inline-block;
+			width: 12px;
+			height: 12px;
+			margin-right: 5px;
+		}
+	}
+}
+
 @media(max-width: 1024px){
     hr{
         margin-top: 7px;
