--- a/app/status-report/status-report.component.html
+++ b/app/status-report/status-report.component.html
@@ -2,7 +2,25 @@
     <h1>Status Report</h1>
     <hr />
 
-    <div class="row-wrapper">
+    <form action="" id="filterForm" method="post" role="form" *ngIf="users && users.length > 0">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6">
+                <div class="form-group">
+                    <label for="selectUser">Select user</label>
+                    <select id="selectUser" name="selectUser" class="form-control" #site [(ngModel)]="selectedSiteId">
+                        <option [value]="item.id" *ngFor="let item of users" #index>{{item.name}}</option>
+                    </select>
+                </div>
+                <wc-button [isDisabled]="isRequesting" (click)="loadReport(selectedSiteId)" [style]="'btn btn-primary'" [label]="'Update'"
+                    [workingLabel]="'Updating...'"></wc-button>
+            </div>
+        </div>
+    </form>
+    <hr *ngIf="users && users.length > 0" />
+
+    <p class="text-center" *ngIf="!isRequesting && !hasData">No data to display</p>
+
+    <div class="row-wrapper" [hidden]="!hasData">
         <div class="row">
             <div class="col-xs-12 gauge section">
                 <h2>Overall Status</h2>
@@ -11,84 +29,84 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-6 piechart section">
+            <div class="col-xs-12 col-md-6 piechart section">
                 <h2>Technician Performance</h2>
                 <div>
                     <canvas id="piechart"></canvas>
                     <div id="js-legend" class="chart-legend"></div>
                 </div>
             </div>
-            <div class="col-xs-6 bar section">
+            <div class="col-xs-12 col-md-6 bar section">
                 <h2>Jobs Completed</h2>
                 <canvas id="barchart" height="230" width="350"></canvas>
             </div>
         </div>
     </div>
-    <div class="row checks">
-        <div class="col-xs-6">
+    <div class="row checks" [hidden]="!hasData">
+        <div class="col-xs-12 col-md-6">
             <h3>Centre Quarterly Check</h3>
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>Date of last check</th>
-                        <th>Date of next check</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><span style="color:#B22222;">01 Jan 01</span></td>
-                        <td><span style="color:#B22222;">01 Apr 01</span></td>
-                        <td><span style="color:#B22222;">Unknown</span></td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Date of last check</th>
+                            <th>Date of next check</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><span style="color:#B22222;">01 Jan 01</span></td>
+                            <td><span style="color:#B22222;">01 Apr 01</span></td>
+                            <td><span style="color:#B22222;">Unknown</span></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-12 col-md-6">
             <h3>Monthly GV212</h3>
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>Generated and printed</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><span style="color:#B22222;">01 Jan 01</span></td>
-                        <td><span style="color:#B22222;">Unknown</span></td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Generated and printed</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><span style="color:#B22222;">01 Jan 01</span></td>
+                            <td><span style="color:#B22222;">Unknown</span></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row" *ngIf="statusReportData && statusReportData.performance">
         <div class="col-xs-12">
             <h3>Technicians QC Report</h3>
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>Technician Name</th>
-                        <th>Date Of Next Check</th>
-                        <th>Training Date Expiry</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><span style="color:#B22222;">ADAM BORRETT</span></td>
-                        <td><span style="color:#B22222;">01 Jul 01</span></td>
-                        <td><span style="color:#B22222;">01 Jan 04</span></td>
-                        <td><span style="color:#000000;"></span></td>
-                    </tr>
-                    <tr>
-                        <td><span style="color:#B22222;">SCOT AUSTIN</span></td>
-                        <td><span style="color:#B22222;">01 Jul 01</span></td>
-                        <td><span style="color:#B22222;">01 Jan 04</span></td>
-                        <td><span style="color:#000000;"></span></td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Technician Name</th>
+                            <th>Date Of Next Check</th>
+                            <th>Training Date Expiry</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let technician of statusReportData.performance">
+                            <td><span [style.color]="technician.statusColor">{{technician.label}}</span></td>
+                            <td><span *ngIf="technician.dateOfNextCheck" [style.color]="technician.statusColor">{{asDate(technician.dateOfNextCheck) | date:'longDate'}}</span></td>
+                            <td><span *ngIf="technician.trainingDateExpiry" [style.color]="technician.threeYearColor">{{asDate(technician.trainingDateExpiry) | date:'longDate'}}</span></td>
+                            <td><span [style.color]="technician.statusColor">{{technician.status}}</span></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
