--- a/app/recent-calibrations/recent-calibrations.component.html
+++ b/app/recent-calibrations/recent-calibrations.component.html
@@ -14,10 +14,7 @@
             </div>
             <div class="col-xs-12 col-sm-4">
                 <div class="form-group">
-                    <!--<label for="from">From</label>
-                    <input type="date" class="form-control" id="from" [(ngModel)]="from" required>
-                    <span class="form-control-feedback"></span>-->
-                    <date-picker label="From" date="from"></date-picker>
+                    <date-picker label="From" (dateChanged)="fromChanged($event)" date="{{from}}"></date-picker>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4">
