--- a/app/utilities/date-picker/date-picker.component.html
+++ b/app/utilities/date-picker/date-picker.component.html
@@ -1,3 +1,3 @@
-<label for="field">{{theLabel}}</label>
-<input type="date" class="form-control" id="{{theLabel.toLowerCase()}}field" [(ngModel)]="thedate" required>
+<label [attr.for]="label.toLowerCase() + 'field'">{{label}}</label>
+<input type="date" class="form-control" [attr.id]="label.toLowerCase() + 'field'" (change)="fireChange()" [(ngModel)]="date" required>
 <span class="form-control-feedback"></span>
