--- a/app/utilities/date-picker/date-picker.component.html
+++ b/app/utilities/date-picker/date-picker.component.html
@@ -1,3 +1,3 @@
 <label [attr.for]="label.toLowerCase() + 'field'">{{label}}</label>
-<input type="date" class="form-control" [attr.id]="label.toLowerCase() + 'field'" (change)="fireChange()" [(ngModel)]="date" required>
+<input type="text" class="form-control" [attr.id]="label.toLowerCase() + 'field'" required>
 <span class="form-control-feedback"></span>
