--- a/css/site.scss
+++ b/css/site.scss
@@ -284,7 +284,7 @@ wc-app > undefined > .container {
     background-color: #f5f5f5;
 }
 
-.btn.btn-primary, pagination-controls .pagination .current {
+.btn.btn-primary, pagination-controls .pagination .current, .is-selected .pika-button, .pika-button:hover {
     color: #fff !important;
     text-shadow: 0 -1px 0 rgba(0,0,0,.25) !important;
     background-color: #da4f49 !important;
@@ -468,4 +468,12 @@ pagination-controls li.current{
     .card-container.card {        
         padding: 20px 20px;
     }
+}
+
+.pika-button {
+    text-align: center;
+}
+
+.is-today .pika-button {
+    color: #da4f49;
 }
